--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,12 @@
         <color name="colorPrimaryDark">#00574B</color>
         <color name="colorAccent">#D81B60</color>
         <color name="navbar_background">#1a1a48</color>
+        <color name="rb_blue">#0000FF</color>
+        <color name="system_red">#ff0000</color>
+        <color name="system_transparent">#00000000</color>
+        <color name="system_blue">#0000ff</color>
+        <color name="rb_red">#921111</color>
+        <color name="rb_orange">#FFA100</color>
         <color name="toolbar_background">#bebebe</color>
+        <color name="scrollView">#8DB3FF</color>
 </resources>
