almost completed exercise 4, kinda did exercise 1

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -237,6 +237,15 @@
                 android:layout_alignBaseline="@+id/textBirthday"
                 />
 
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BFF "
+                android:layout_below="@+id/btnBirthday"
+                android:layout_marginLeft="10dp"
+                />
+
 
         </RelativeLayout>
     </ScrollView>
