--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,6 +5,12 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/textZIP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ZIP" />
+
+    <TextView
         android:id="@+id/textContactName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,6 +33,17 @@
         android:layout_below="@+id/textContactName"
         android:text="Phone Number" />
 
+    <TextView
+        android:id="@+id/textCellNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_below="@+id/textPhoneNumber"
+        android:text="Cell Name" />
+
     <Button
         android:id="@+id/buttonDeleteContact"
         android:layout_width="wrap_content"
@@ -44,4 +61,16 @@
         android:text="Delete"
         android:textColor="@color/system_red"
         android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/textStreetAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Street Address" />
+
+    <TextView
+        android:id="@+id/textState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="State" />
 </RelativeLayout>
