--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -85,4 +86,16 @@
         android:layout_toRightOf="@+id/textStreetAddress"
         android:layout_marginLeft="5dp"
         android:text="State" />
+
+    <ImageView
+        android:id="@+id/imageStar"
+        android:layout_width="67dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="115dp"
+        android:layout_marginRight="115dp"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 </RelativeLayout>
