--- a/app/src/main/res/layout/activity_contact_map.xml
+++ b/app/src/main/res/layout/activity_contact_map.xml
@@ -4,7 +4,138 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactMapActivity">
+    tools:context=".ContactMapActivity"
+    android:id="@+id/activity_contact_map">
+
+    <RelativeLayout
+        android:id="@+id/GPSLocater"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/navbar"
+        android:layout_marginBottom="56dp">
+
+        <TextView
+            android:id="@+id/textAddress"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editName"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:text="Address:" />
+
+        <EditText
+            android:id="@+id/editAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textAddress"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
+            android:ems="15"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords" />
+
+        <EditText
+            android:id="@+id/editCity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editAddress"
+            android:layout_alignParentLeft="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:ems="8"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            android:nextFocusDown="@+id/editState" />
+
+        <EditText
+            android:id="@+id/editState"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/editCity"
+            android:layout_toEndOf="@+id/editCity"
+            android:layout_toRightOf="@+id/editCity"
+            android:ems="2"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            android:maxLength="2"
+            android:nextFocusDown="@+id/editZipCode" />
+
+        <EditText
+            android:id="@+id/editZipcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/editCity"
+            android:layout_toEndOf="@+id/editState"
+            android:layout_toRightOf="@+id/editState"
+            android:ems="5"
+            android:imeOptions="actionNext"
+            android:inputType="numberSigned"
+            android:maxLength="5"
+            android:nextFocusDown="@+id/editHome" />
+
+        <Button
+            android:id="@+id/buttonGetLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editCity"
+            android:text="Get Coordinates" />
+
+        <TextView
+            android:id="@+id/latitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/buttonGetLocation"
+            android:layout_alignLeft="@+id/buttonGetLocation"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="0dp"
+            android:text="Latitude: " />
+
+        <TextView
+            android:id="@+id/longitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/latitude"
+            android:layout_marginTop="1dp"
+            android:text="Longitude: " />
+
+        <TextView
+            android:id="@+id/accuracy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/longitude"
+            android:text="Accuracy: " />
+
+        <TextView
+            android:id="@+id/textLatitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/latitude"
+            android:layout_toRightOf="@+id/latitude"
+            android:text="None" />
+
+        <TextView
+            android:id="@+id/textLongitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/longitude"
+            android:layout_toRightOf="@id/longitude"
+            android:text="None" />
+
+        <TextView
+            android:id="@+id/textAccuracy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/accuracy"
+            android:layout_toRightOf="@id/accuracy"
+
+            android:text="None" />
+
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/navbar"
