--- a/app/src/main/res/layout/activity_contact_map.xml
+++ b/app/src/main/res/layout/activity_contact_map.xml
@@ -8,19 +8,33 @@
     android:id="@+id/activity_contact_map">
 
     <RelativeLayout
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        >
 
 
+        <Button
+            android:id="@+id/buttonMapType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:text="Satellite View" />
     </RelativeLayout>
 
     <fragment
         android:id="@+id/map"
+        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/navbar"
-        class="com.google.android.gms.maps.SupportMapFragment"/>
+        android:layout_below="@+id/toolbar"
+        android:layout_above="@id/navbar"/>
 
     <RelativeLayout
         android:id="@+id/navbar"
