Application utilizes the gps sensor, battery sensor, and can call people from contacts...
completed up to 8.9

Signed-off-by: abdulhakimdarman <abdul10hakim@gmail.com>

--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -28,6 +28,15 @@
             android:textOff="Enable Delete"
             android:textOn="Disable Delete"/>
 
+        <TextView
+            android:id="@+id/textBatteryLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100%"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            />
+
         <Button
             android:id="@+id/buttonAdd"
             android:layout_width="wrap_content"
