--- a/app/src/main/res/layout/activity_contact_map.xml
+++ b/app/src/main/res/layout/activity_contact_map.xml
@@ -17,12 +17,20 @@
         >
 
 
+        <TextView
+            android:id="@+id/textHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:text="WNW" />
+
         <Button
             android:id="@+id/buttonMapType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:text="Satellite View" />
