--- a/app/src/main/res/layout/activity_contact_settings.xml
+++ b/app/src/main/res/layout/activity_contact_settings.xml
@@ -47,13 +47,21 @@
     <ScrollView
         android:id="@+id/settingsScroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_weight="1"
+        android:layout_above="@+id/navbar">
+
+
 
         <RelativeLayout
-            android:id="@+id/settingsR"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+
 
             <TextView
                 android:id="@+id/textContactSort"
@@ -157,7 +165,12 @@
                 android:layout_marginStart="35dp"
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="10dp">
-
+                <RadioButton
+                    android:id="@+id/radioDefault"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textColorGroup"
+                    android:text="Default Background" />
                 <RadioButton
                     android:id="@+id/radioBlue"
                     android:layout_width="match_parent"
@@ -169,8 +182,10 @@
                     android:id="@+id/radioRed"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/radioBlue"
+                    android:layout_below="@+id/radioDefault"
                     android:text="Red Background" />
+
+
             </RadioGroup>
 
         </RelativeLayout>
