--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ContactActivity">
+    tools:context=".ContactActivity"
+    android:id="@+id/activity_main">
 
     <RelativeLayout
         android:id="@+id/toolbar"
